Bug 1569927: Use correct name for fractional second parts record. r=jwalden

Differential Revision: https://phabricator.services.mozilla.com/D39871